<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.scfs</groupId>
    <artifactId>scfs-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>SCFS Backend Parent</name>
    <description>供应链金融智能风控与尽调辅助平台 - 后端多模块工程</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <modules>
        <module>scfs-common</module>
        <module>scfs-module-graph</module>
        <module>scfs-module-verify</module>
        <module>scfs-module-preaudit</module>
        <module>scfs-module-risk</module>
        <module>scfs-app</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <scfs.version>1.0.0</scfs.version>
        <mybatis.version>3.5.16</mybatis.version>
        <mybatis-spring.version>3.0.3</mybatis-spring.version>
        <postgresql.version>42.7.3</postgresql.version>
        <minio.version>8.5.10</minio.version>
        <drools.version>8.44.0.Final</drools.version>
        <jjwt.version>0.12.5</jjwt.version>
        <paddleocr.version>0.0.1</paddleocr.version>
        <hutool.version>5.8.27</hutool.version>
        <knife4j.version>4.5.0</knife4j.version>
        <flyway.version>9.22.3</flyway.version>
        <springdoc.version>2.3.0</springdoc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- SCFS 内部模块 -->
            <dependency>
                <groupId>com.scfs</groupId>
                <artifactId>scfs-common</artifactId>
                <version>${scfs.version}</version>
            </dependency>
            <dependency>
                <groupId>com.scfs</groupId>
                <artifactId>scfs-module-graph</artifactId>
                <version>${scfs.version}</version>
            </dependency>
            <dependency>
                <groupId>com.scfs</groupId>
                <artifactId>scfs-module-verify</artifactId>
                <version>${scfs.version}</version>
            </dependency>
            <dependency>
                <groupId>com.scfs</groupId>
                <artifactId>scfs-module-preaudit</artifactId>
                <version>${scfs.version}</version>
            </dependency>
            <dependency>
                <groupId>com.scfs</groupId>
                <artifactId>scfs-module-risk</artifactId>
                <version>${scfs.version}</version>
            </dependency>

            <!-- 数据库 -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>

            <!-- MyBatis -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis-spring.version}</version>
            </dependency>

            <!-- MinIO -->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>

            <!-- Drools -->
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-core</artifactId>
                <version>${drools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-compiler</artifactId>
                <version>${drools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kie</groupId>
                <artifactId>kie-ci</artifactId>
                <version>${drools.version}</version>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>

            <!-- Hutool 工具包 -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <!-- API 文档 -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
